--- a/bootstrap/hello-world.html
+++ b/bootstrap/hello-world.html
@@ -10,10 +10,380 @@
 
     <title>Hello, world!</title>
     <style>
+      .div1{
+        background: red;
+      }
+      .div2{
+        background: yellow;
+      }
+      .div3{
+        background: green;
+      }
+
+      .col {
+        background: yellow;
+        height: 200px;
+        border: 1px solid red;
+      }
     </style>
   </head>
   <body>
-    <a class="btn btn-primary">Click Me!</a>
+
+    
+
+    <!-- <div class="container">
+      adasdasd
+    </div>
+
+    <div class="container-fluid">
+      asdasda
+    </div> -->
+
+    <!-- Grid -->
+    <!-- <div class="row">
+      <div class="col-xl-8 col-lg-6 col-md-4 col-sm-4 col-12 div1">asdasdasd</div>
+      <div class="col-xl-8 col-lg-6 col-md-4 col-sm-4 col-12 div2">zdfsdfsdfsdf</div>
+      <div class="col-xl-4 col-lg-6 col-md-4 col-sm-4 col-12 div3">zdfsdfsdfsdf</div>
+    </div> -->
+
+    <!-- <div class="row">
+      <div class="col"></div>
+      <div class="col"></div>
+    </div> -->
+
+    <!-- Typography -->
+    <!-- header -->
+    <!-- <div class="container">
+        <h1>h1 Bootstrap heading (2.5rem = 40px)</h1>
+        <h2>h2 Bootstrap heading (2rem = 32px)</h2>
+        <h3>h3 Bootstrap heading (1.75rem = 28px)</h3>
+        <h4>h4 Bootstrap heading (1.5rem = 24px)</h4>
+        <h5>h5 Bootstrap heading (1.25rem = 20px)</h5>
+        <h6>h6 Bootstrap heading (1rem = 16px)</h6>
+    </div> -->
+
+    <!-- display classes -->
+    <!-- <div class="container">
+        <h1>Display Headings</h1>
+        <p>Display headings are used to stand out more than normal headings (larger font-size and lighter font-weight):</p>
+        <h1 class="display-1">Display 1</h1>
+        <h1 class="display-2">Display 2</h1>
+        <h1 class="display-3">Display 3</h1>
+        <h1 class="display-4">Display 4</h1>
+    </div> -->
+
+    <!-- small -->
+    <!-- <div class="container">
+        <h1>Lighter, Secondary Text</h1>
+        <p>The small element is used to create a lighter, secondary text in any heading:</p>       
+        <h1>h1 heading <small>secondary text</small></h1>
+        <h2>h2 heading <small>secondary text</small></h2>
+        <h3>h3 heading <small>secondary text</small></h3>
+        <h4>h4 heading <small>secondary text</small></h4>
+        <h5>h5 heading <small>secondary text</small></h5>
+        <h6>h6 heading <small>secondary text</small></h6>
+    </div> -->
+
+    <!-- Mark -->
+    <!-- <p>Use the mark element to <mark>highlight</mark> text.</p> -->
+
+    <!-- abbr -->
+    <!-- <p>The <abbr title="World Health Organization">WHO</abbr> was founded in 1948.</p> -->
+
+    <!-- blockquote -->
+    <!-- <div class="container">
+      <blockquote class="blockquote">
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+        <footer class="blockquote-footer">From Lorem Ipsum website</footer>
+      </blockquote>
+    </div> -->
+
+    <!-- <div class="container">
+        <h1>Code Snippets</h1>
+        <p>The following HTML elements: <code>function () {}</code>, <code>section</code>, and <code>div</code> defines a section in a document.</p>
+        <p>Use <kbd>ctrl + p</kbd> to open the Print dialog box.</p>
+    </div> -->
+
+    <!-- <div class="container">
+        Text in a pre element
+        <pre>
+        Text in a pre element
+        is displayed in a fixed-width
+        font, and it preserves
+        both      spaces and
+        line breaks.
+        </pre>
+    </div> -->
+
+    <!-- TEXT ALIGNMENT and FORMATTING -->
+
+    <!-- <p class="text-justify">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+    <p class="text-left">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+    <p class="text-center">Center aligned text on all viewport sizes.</p>
+    <p class="text-right">Right aligned text on all viewport sizes.</p> -->
+
+    <!-- <div class="text-nowrap text-truncate" style="width: 100px; background: #666; color: yellow;">
+      This text should overflow the parent.
+    </div> -->
+
+    <!-- <p class="text-lowercase">ASASASASAS</p>
+    <p class="text-uppercase">Uppercased text.</p>
+    <p class="text-capitalize">CapiTaliZed text.</p> -->
+
+    <!-- <p class="font-weight-bold">Bold text.</p>
+    <p class="font-weight-normal">Normal weight text.</p>
+    <p class="font-weight-light">Light weight text.</p>
+    <p class="font-italic">Italic text.</p>     -->
+
+
+    <!-- Floats -->
+    <!-- <div class="float-left">Float left on all viewport sizes</div><br>
+    <div class="float-right">Float right on all viewport sizes</div><br>
+    <div class="float-none">Don't float on all viewport sizes</div> -->
+
+
+
+    <!-- Positions -->
+    <!-- <div class="position-static">...</div>
+    <div class="position-relative">...</div>
+    <div class="position-absolute">...</div>
+    <div class="position-fixed">...</div>
+    <div class="position-sticky">...</div>
+
+    <div class="fixed-top">...</div>
+    <div class="fixed-bottom">...</div> -->
+
+    <!-- Display -->
+
+    <!-- <div class="d-flex justify-content-start">
+      <div class="d">asdasdasd</div>
+      <div class="d">2sadasdas</div>
+    </div> -->
+
+    <!-- d-block | d-none | d-flex -->
+
+    <!-- <div class="d-flex justify-content-start">...</div>
+    <div class="d-flex justify-content-end">...</div>
+    <div class="d-flex justify-content-center">...</div>
+    <div class="d-flex justify-content-between">...</div>
+    <div class="d-flex justify-content-around">...</div>
+
+
+    <!-- Text Colors -->
+    <!-- <p class="text-primary">.text-primary</p>
+    <p class="text-secondary">.text-secondary</p>
+    <p class="text-success">.text-success</p>
+    <p class="text-danger">.text-danger</p>
+    <p class="text-warning">.text-warning</p>
+    <p class="text-info">.text-info</p>
+    <p class="text-light">.text-light</p>
+    <p class="text-dark">.text-dark</p>
+    <p class="text-muted">.text-muted</p>
+    <p class="text-white">.text-white</p> -->
+
+
+
+    <!-- Backgrounds -->
+    <!-- <div class="bg-primary text-white">.bg-primary</div>
+    <div class="bg-secondary text-white">.bg-secondary</div>
+    <div class="bg-success text-white">.bg-success</div>
+    <div class="bg-danger text-white">.bg-danger</div>
+    <div class="bg-warning text-dark">.bg-warning</div>
+    <div class="bg-info text-white">.bg-info</div>
+    <div class="bg-light text-dark">.bg-light</div>
+    <div class="bg-dark text-white">.bg-dark</div>
+    <div class="bg-white text-dark">.bg-white</div> -->
+
+
+    <!-- Spacing -->
+    <!-- <div class="p-3 mb-2 bg-primary text-white">.bg-primary</div>
+    <div class="p-3 mb-2 bg-secondary text-white">.bg-secondary</div>
+    <div class="p-3 mb-2 bg-success text-white">.bg-success</div>
+    <div class="p-3 mb-2 bg-danger text-white">.bg-danger</div>
+    <div class="p-3 mb-2 bg-warning text-dark">.bg-warning</div>
+    <div class="p-3 mb-2 bg-info text-white">.bg-info</div>
+    <div class="p-3 mb-2 bg-light text-dark">.bg-light</div>
+    <div class="p-3 mb-2 bg-dark text-white">.bg-dark</div>
+    <div class="p-3 mb-2 bg-white text-dark">.bg-white</div> -->
+
+    <!-- <div class="mx-auto" style="width: 200px;">
+      Centered element
+    </div> -->
+
+
+
+    <!-- Sizing -->
+    <!-- <div class="w-25 p-3" style="background-color: #ff0000;">Width 25%</div>
+    <div class="w-50 p-3" style="background-color: #ff0000;">Width 50%</div>
+    <div class="w-75 p-3" style="background-color: #ff0000;">Width 75%</div>
+    <div class="w-100 p-3" style="background-color: #ff0000;">Width 100%</div> -->
+
+    <!-- <div style="height: 100px; background-color: yellow;">
+      <div class="h-25 d-inline-block" style="width: 120px; background-color: red">Height 25%</div>
+      <div class="h-50 d-inline-block" style="width: 120px; background-color: red">Height 50%</div>
+      <div class="h-75 d-inline-block" style="width: 120px; background-color: red">Height 75%</div>
+      <div class="h-100 d-inline-block" style="width: 120px; background-color: red">Height 100%</div>
+    </div> -->
+
+    <!-- <div style="width: 100px; background: yellow;">
+      <div class="mw-100" style="width: 600px; background-color: red;">Max-width 100%</div>
+    </div>
+
+    <div style="height: 100px; background-color: rgba(255,0,0,0.1);">
+      <div class="mh-100" style="width: 100px; height: 200px; background-color: rgba(0,0,255,0.1);">Max-height 100%</div>
+    </div> -->
+
+
+
+    <!-- Buttons -->
+    <!-- <div class="mt-4 ml-2">
+      <button type="button" class="btn btn-primary">Primary</button>
+      <button type="button" class="btn btn-primary active">Primary</button>
+      <button type="button" class="btn btn-secondary">Secondary</button>
+      <button type="button" class="btn btn-success">Success</button>
+      <button type="button" class="btn btn-danger">Danger</button>
+      <button type="button" class="btn btn-warning">Warning</button>
+      <button type="button" class="btn btn-info">Info</button>
+      <button type="button" class="btn btn-light">Light</button>
+      <button type="button" class="btn btn-dark">Dark</button>
+      <button type="button" class="btn btn-link">Link</button>
+    </div> -->
+
+    <!-- <a class="btn btn-primary" href="#" role="button">Link</a>
+    <input class="btn btn-primary" type="button" value="Input"> -->
+
+    <!-- <button type="button" class="btn btn-outline-primary">Primary</button>
+    <button type="button" class="btn btn-outline-secondary">Secondary</button>
+    <button type="button" class="btn btn-outline-success">Success</button>
+    <button type="button" class="btn btn-outline-danger">Danger</button>
+    <button type="button" class="btn btn-outline-warning">Warning</button>
+    <button type="button" class="btn btn-outline-info">Info</button>
+    <button type="button" class="btn btn-outline-light">Light</button>
+    <button type="button" class="btn btn-outline-dark">Dark</button> -->
+
+    <!-- <button type="button" class="btn btn-primary btn-lg">Large button</button>
+    <button type="button" class="btn btn-secondary btn-lg">Large button</button>
+
+    <button type="button" class="btn btn-primary">Large button</button>
+    <button type="button" class="btn btn-secondary">Large button</button>
+
+    <button type="button" class="btn btn-primary btn-sm">Small button</button>
+    <button type="button" class="btn btn-secondary btn-sm">Small button</button> -->
+
+    <!-- <div class="w-50">
+      <button type="button" class="btn btn-primary btn-lg btn-block">Block level button</button>
+      <button type="button" class="btn btn-secondary btn-lg btn-block">Block level button</button>
+    </div> -->
+
+    <!-- Active buttons... look like pressed with darker bg -->
+    <!-- <a href="#" class="btn btn-primary btn-lg active">Primary link</a>
+    <a href="#" class="btn btn-secondary btn-lg active">Link</a> -->
+
+    <!-- Disabled Buttons -->
+    <!-- <a href="#" class="btn btn-primary btn-lg disabled">Primary link</a>
+    <button type="button" class="btn btn-lg btn-primary" disabled>Primary button</button>
+    <button type="button" class="btn btn-secondary btn-lg" disabled>Button</button> -->
+
+    <!-- <div class="btn-group btn-group-toggle m-4" data-toggle="buttons">
+      <label class="btn btn-success active">
+        <input type="radio" name="options" id="option1" autocomplete="off" checked> Active
+      </label>
+      <label class="btn btn-success">
+        <input type="radio" name="options" id="option2" autocomplete="off"> Radio
+      </label>
+      <label class="btn btn-success">
+        <input type="radio" name="options" id="option3" autocomplete="off"> Radio
+      </label>
+    </div> -->
+
+    <!-- NAV Bar -->
+
+    <!-- LIST -->
+    <!-- <ul class="list-group m-4">
+      <li class="list-group-item active">Cras justo odio</li>
+      <li class="list-group-item">Dapibus ac facilisis in</li>
+      <li class="list-group-item">Morbi leo risus</li>
+      <li class="list-group-item">Porta ac consectetur ac</li>
+      <li class="list-group-item disabled">Vestibulum at eros</li>
+    </ul> -->
+
+    <!-- <li class="list-group-item active">Cras justo odio</li> -->
+    <!-- <li class="list-group-item disabled">Cras justo odio</li> -->
+
+    <!-- <div class="list-group m-4">
+      <a href="#" class="list-group-item list-group-item-action active">
+        Cras justo odio
+      </a>
+      <a href="#" class="list-group-item list-group-item-action">Dapibus ac facilisis in</a>
+      <a href="#" class="list-group-item list-group-item-action">Morbi leo risus</a>
+      <a href="#" class="list-group-item list-group-item-action">Porta ac consectetur ac</a>
+      <a href="#" class="list-group-item list-group-item-action disabled">Vestibulum at eros</a>
+    </div> -->
+
+    <!-- <ul class="list-group list-group-flush m-4">
+      <li class="list-group-item">Cras justo odio</li>
+      <li class="list-group-item">Dapibus ac facilisis in</li>
+      <li class="list-group-item">Morbi leo risus</li>
+      <li class="list-group-item">Porta ac consectetur ac</li>
+      <li class="list-group-item">Vestibulum at eros</li>
+    </ul> -->
+
+    <!-- <ul class="list-group">
+      <li class="list-group-item">Dapibus ac facilisis in</li>
+      <li class="list-group-item list-group-item-primary">This is a primary list group item</li>
+      <li class="list-group-item list-group-item-secondary">This is a secondary list group item</li>
+      <li class="list-group-item list-group-item-success">This is a success list group item</li>
+      <li class="list-group-item list-group-item-danger">This is a danger list group item</li>
+      <li class="list-group-item list-group-item-warning">This is a warning list group item</li>
+      <li class="list-group-item list-group-item-info">This is a info list group item</li>
+      <li class="list-group-item list-group-item-light">This is a light list group item</li>
+      <li class="list-group-item list-group-item-dark">This is a dark list group item</li>
+    </ul> -->
+
+    <!-- Badges -->
+    <!-- <ul class="list-group">
+      <li class="list-group-item d-flex justify-content-between align-items-center">
+        Cras justo odio
+        <span class="badge badge-primary badge-pill">14</span>
+      </li>
+      <li class="list-group-item d-flex justify-content-between align-items-center">
+        Dapibus ac facilisis in
+        <span class="badge badge-primary badge-pill">2</span>
+      </li>
+      <li class="list-group-item d-flex justify-content-between align-items-center">
+        Morbi leo risus
+        <span class="badge badge-primary badge-pill">1</span>
+      </li>
+    </ul> -->
+
+    <!-- CUSTOM CONTENT -->
+    <!-- <div class="list-group m-4">
+      <a href="#" class="list-group-item list-group-item-action active">
+        <div class="d-flex w-100 justify-content-between">
+          <h5 class="mb-1">List group item heading</h5>
+          <small>3 days ago</small>
+        </div>
+        <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+        <small>Donec id elit non mi porta.</small>
+      </a>
+      <a href="#" class="list-group-item list-group-item-action">
+        <div class="d-flex w-100 justify-content-between">
+          <h5 class="mb-1">List group item heading</h5>
+          <small class="text-muted">3 days ago</small>
+        </div>
+        <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+        <small class="text-muted">Donec id elit non mi porta.</small>
+      </a>
+      <a href="#" class="list-group-item list-group-item-action">
+        <div class="d-flex w-100 justify-content-between">
+          <h5 class="mb-1">List group item heading</h5>
+          <small class="text-muted">3 days ago</small>
+        </div>
+        <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+        <small class="text-muted">Donec id elit non mi porta.</small>
+      </a>
+    </div> -->
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
