List updated, Anchor, Table

--- a/HTML/4.list.html
+++ b/HTML/4.list.html
@@ -29,17 +29,17 @@
 
         <dl>
             <dt>HTML</dt>
-            <dd>- Hyper Text Markup Language</dd>
-            <dd>- html5 is latest</dd>
-            <dd>- html5 is latest</dd>
-            <dd>- html5 is latest</dd>
+            <dd>Hyper Text Markup Language</dd>
+            <dd>html5 is latest</dd>
+            <dd>html5 is latest</dd>
+            <dd>html5 is latest</dd>
 
             
             <dt>CSS</dt>
-            <dd>- CASCADING STYLE SHEETS</dd>
-            <dd>- html5 is latest</dd>
-            <dd>- html5 is latest</dd>
-            <dd>- html5 is latest</dd>
+            <dd>CASCADING STYLE SHEETS</dd>
+            <dd>html5 is latest</dd>
+            <dd>html5 is latest</dd>
+            <dd>html5 is latest</dd>
         </dl>
     </body>
 </html>
