Iframe iwth SRCDOC

--- a/HTML/9.iframe.html
+++ b/HTML/9.iframe.html
@@ -7,5 +7,9 @@
         <iframe src="http://www.gmail.com">
             THis is supposed be an ifram  that load gmail
         </iframe>
+
+        <iframe srcdoc="<p>Hiii</p>">
+            THis is supposed be an ifram  that load gmail
+        </iframe>
     </body>
 </html>
