--- a/HTML/10.form.html
+++ b/HTML/10.form.html
@@ -1,23 +1,135 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title></title>
-    </head>
-    <body>
-        <form action="8.pre.html" method="get">
-            <table>
-                <tr>
-                    <td>Username</td>
-                    <td><input name="username" type="text"/></td>
-                </tr>
-                <tr>
-                    <td>Password</td>
-                    <td><input name="password" type="password"/></td>
-                </tr>
-                <tr>
-                    <td colspan="2"><input type="submit" value="Login"/></td>
-                </tr>
-            </table>            
-        </form>
-    </body>
+
+<head>
+    <title></title>
+</head>
+
+<body>
+    <form>
+        <label for="user-name">User Name</label> <input type="text" name="user-name" id="user-name"/> <br/>
+        Fame <input type="text">
+    </form>
+    <!-- <form action="8.pre.html" method="get">
+        <table>
+            <tr>
+                <td>Username</td>
+                <td>
+                    <input name="username" type="text" />
+                </td>
+            </tr>
+            <tr>
+                <td>Password</td>
+                <td>
+                    <input name="password" type="password" />
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <input type="reset" value="Reset" />
+                </td>
+                <td>
+                    <input type="submit" value="Login" />
+                </td>
+            </tr>
+        </table>
+    </form> -->
+</body>
+
 </html>
+
+<!-- -------------------------------------------------------------------------------- -->
+
+
+<!-- <form action="http://localhost:8888/uitraining/calc.php">
+<input type="text" name="a" value=""/>
+<input type="text" name="b" value=""/>
+<input type="submit" value="Add"/>
+<input type="reset" value="Reset"/>
+</form> -->
+
+<!-- <input type="password"/>
+<input type="submit"/>
+<input type="reset"/> <br/>
+<input name="gender" type="radio"/> Male
+<input name="gender" type="radio"/> Female <br/>
+<input name="edu" type="checkbox"/> Grad
+<input name="edu" type="checkbox"/> Post Grad
+<input name="edu" type="checkbox"/> PhD -->
+<!-- Types: text, password, submit, reset, radio, checkbox -->
+
+<!-- readonly -->
+<!-- disabled -->
+<!-- required -->
+<!-- max, min -->
+<!-- maxlength -->
+<!-- size -->
+
+<!-- <select name="cars">
+<option value="volvo">Volvo</option>
+<option value="saab">Saab</option>
+<option value="fiat">Fiat</option>
+<option value="audi">Audi</option>
+</select> -->
+
+<!-- selected attribute-->
+<!-- size="2" to show number of values-->
+<!-- multiple -->
+
+<!-- <textarea name="message" rows="10" cols="30"></textarea> -->
+
+<!-- <button type="button" onclick="alert('Hello World!')">Click Me!</button> -->
+
+
+<!-- Number -->
+<!-- <input type="number" name="count" min="1" max="5"> -->
+
+<!-- Range -->
+<!-- <input type="range" name="rating" min="0" max="10"> -->
+
+<!-- Email -->
+<!-- <form action="#">
+<input type="email" name="email">
+<input type="submit">
+</form> -->
+
+<!-- URL -->
+<!-- <input type="url" name="website"> -->
+
+<!-- Date -->
+<!-- <input type="date" name="splday"> -->
+<!-- <input type="date" name="splday" max="1988-08-15">    -->
+<!-- <input type="date" name="splday" min="2018-10-10"> -->
+<!-- <input type="datetime-local" name="splday"> -->
+
+<!-- Week -->
+<!-- <input type="week" name="week_year"> -->
+
+<!-- Month -->
+<!-- <input type="month" name="bdaymonth"> -->
+
+<!-- Time -->
+<!-- <input type="time" name="usr_time"> -->
+
+<!-- File -->
+<!-- <input type="file" name="myFile"> -->
+
+<!-- Color -->
+<!-- <input type="color" name="favcolor"> -->
+
+
+<!-- ///////////////////Fieldset///////////////////////// -->
+<!-- <form>
+<fieldset>
+<legend>Personalia:</legend>
+Username: <input type="text"><br>
+Passoword: <input type="password"><br>
+</fieldset>
+</form> -->
+
+
+<!-- /////////////////////Label//////////////////////// -->
+<!-- <form> 
+<label for="favorite-animal">Favorite Animal</label>
+<input name="favorite-animal" id="favorite-animal">
+</form> -->
