CSS and other html

--- a/HTML/extras/wikipedia/index.1.html
+++ b/HTML/extras/wikipedia/index.1.html
@@ -7,7 +7,7 @@
     <body style="margin:0px; padding:0px;">
         <table width="100%"  cellspacing="0">
             <tr valign="top"  height="800">
-                <td bgcolor="#F6F6F6" width="135px" style="padding:20px">
+                <td bgcolor="#F6F6F6" width="200px" style="padding:20px">
                     <img src="https://en.wikipedia.org/static/images/project-logos/enwiki.png"/>
                     <div>
                         <dl>
@@ -22,22 +22,8 @@
                         </dl>
                     </div>
                 </td>                
-                <td bgcolor="#FFFFFF">
-                    <table width="100%" border="1" style="outline: none;">
-                        <tr>
-                            <td colspan="2" style="border-color: red;">
-                                000
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                1
-                            </td>
-                            <td>
-                                2
-                            </td>
-                        </tr>
-                    </table>
+                <td bgcolor = "#FFFFFF">
+                    asdasd
                 </td>
             </tr>
         </table>
