--- a/CSS/index.html
+++ b/CSS/index.html
@@ -8,14 +8,36 @@
 
             p.failed{
                 color:red;
+                background: pink;
             }
 
             p#topper{
                 color: green;
             }
+
+            div {
+                width: 200px;
+                height: 200px;
+                background-color: yellow;
+                background-image: url('https://cdn4.iconfinder.com/data/icons/emoticons-outline/512/1-512.png');
+                background-repeat: no-repeat;
+                background-position-x: center;
+                background-position-y: center;
+                border: 1px solid red;
+                /* border-radius: 50%; */
+                padding-left: 10px;
+                margin-bottom: 10px;
+            }
         </style>
     </head>
     <body>
+<!-- 
+        <img src="https://cdn4.iconfinder.com/data/icons/emoticons-outline/512/1-512.png" width="200px"/>
+        <br/> -->
+
+        <div>Test</div>
+        <div>Test1</div>
+        <!-- <input type="text" placeholder="Enter name"/>
         <span class="failed">These are the results of Students</span>
         <p>1</p>
         <p class="failed">2</p>
@@ -24,6 +46,6 @@
         <p>5</p>
         <p id="topper">6</p>
         <p>7</p>
-        <p>8</p>
+        <p>8</p> -->
     </body>
 </html>
