--- a/HTML/extras/wikipedia/index.html
+++ b/HTML/extras/wikipedia/index.html
@@ -3,11 +3,28 @@
     <head>
         <title>Wikipedia, the free encyclopedia</title>
         <link rel="shorcut icon" href="https://en.wikipedia.org/static/favicon/wikipedia.ico" type="image/x-icon"/>
+        <style>
+            #left-panel{
+                border-right: 1px solid #A7D7F9;
+            }
+
+            dd {
+                margin-left: 10px;
+                color: blue;
+            }
+
+            dt {
+                margin-left: 10px;
+                margin-bottom: 10px;
+                border-bottom: 1px solid #ccc;
+                padding-bottom: 5px;
+            }
+        </style>
     </head>
     <body style="margin:0px; padding:0px;">
         <table width="100%"  cellspacing="0">
             <tr valign="top"  height="800">
-                <td bgcolor="#F6F6F6" width="135px" style="padding:20px">
+                <td id="left-panel" bgcolor="#F6F6F6" width="160px" style="padding:20px">
                     <img src="https://en.wikipedia.org/static/images/project-logos/enwiki.png"/>
                     <div>
                         <dl>
@@ -17,27 +34,14 @@
                             <dd>Current Event</dd>
                         </dl>
                         <dl>
+                            <dt>Interaction</dt>
                             <dd>Help</dd>
                             <dd>About Wiki</dd>
                         </dl>
                     </div>
                 </td>                
-                <td bgcolor="#FFFFFF">
-                    <table width="100%" border="1" style="outline: none;">
-                        <tr>
-                            <td colspan="2" style="border-color: red;">
-                                000
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                1
-                            </td>
-                            <td>
-                                2
-                            </td>
-                        </tr>
-                    </table>
+                <td bgcolor = "#FFFFFF">
+                    asdasd
                 </td>
             </tr>
         </table>
