Updated CSS content

--- a/HTML/10.form.html
+++ b/HTML/10.form.html
@@ -6,10 +6,12 @@
 </head>
 
 <body>
-    <form>
-        <label for="user-name">User Name</label> <input type="text" name="user-name" id="user-name"/> <br/>
-        Fame <input type="text">
-    </form>
+    <select>
+        <option>a</option>
+        <option>b</option>
+        <option>c</option>
+    </select>
+    <input placeholder="asdasd"/>
     <!-- <form action="8.pre.html" method="get">
         <table>
             <tr>
