Added new CSS content

--- a/CSS/6.dispaly.html
+++ b/CSS/6.dispaly.html
@@ -5,6 +5,10 @@
             body{
                 margin: 0px;
             }
+
+            /* .parent {
+                display: flex;
+            } */
             
             .child {
                 width: 50px;
@@ -12,14 +16,28 @@
                 background: yellow;
                 border: 1px solid #333;
             }
+
+            /* .left {
+                width: 10%;
+                background: #F6F6F6;
+            }
+
+            .right {
+                width: 90%;
+                background: #CCC;
+            } */
         </style>
     </head>
     <body>
+        <!-- <span>test1</span> <span>test2</span> -->
         <div class="parent">
             <div class="child">1</div>
             <div class="child">2</div>
             <div class="child">3</div>
             <div class="child">4</div>
         </div>
+
+        <!-- <div class="left">Left</div>
+        <div class="right">Right</div> -->
     </body>
 </html>
