Added notes fpor some css properties

--- a/CSS/10.transition.html
+++ b/CSS/10.transition.html
@@ -8,17 +8,17 @@
             div{
                 background: red;
                 height: 100px;
-                width: 150px;
-                /* transform: scaleX(1); */
-                /* transition: transform 5s; */
+                width: 100px;
+                transform: rotate(0deg);
+                /* transition-property: background transform; */
                 transition-property: background;
                 transition-duration: 2s;
-                transition-delay: 2s;
-                /* transition-timing-function: cubic-bezier(0.895, 0.03, 0.685, 0.22); */
+                /* transition-delay: 2s; */
+                /* transition-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.275); */
             }
 
             div:hover{
-                /* transform: scaleX(1.5); */
+                /* transform: rotate(360deg); */
                 background: yellow;
             }
 
