--- a/CSS/12.selectors-heirarical.html
+++ b/CSS/12.selectors-heirarical.html
@@ -1,12 +1,10 @@
 <html>
     <head>
         <style>
-            /* .parent:hover{
-                background: pink;
-            } */
+            
 
-            /* .parent:hover .child{
-                background: pink;
+            /* div.child{
+                background: yellow;
             } */
 
             /* .parent .child{
@@ -15,27 +13,33 @@
 
             /* .parent>.child{
                 background: orange;
-            } */
-
-            div.child{
-                background: yellow;
-            }
+            }             */
 
             /* body>.child {
                 background: aqua;
+            } */
+
+
+            /* .parent .child{
+                background: pink;
+            } */
+
+            /* .parent:hover .child{
+                background: pink;
             } */
         </style>
     </head>
     <body>
         <div class="parent">
-            <div class="child">Viswanath</div>
+            <div class="child">Direct child</div>
             <div>
+                <p>other children</p>
                 <div>
-                    <div class="child">Engineer</div>
+                    <div class="child">Great grand child</div>
                 </div>
             </div>
         </div>
-        <div class="child">sdafdfasdfasdfa</div>
+        <div class="child">Outside element</div>
 
 
         <div class="yellow">Div element</div>
