--- a/CSS/15.buttons.html
+++ b/CSS/15.buttons.html
@@ -72,13 +72,12 @@
             /* Hovered buttons */
             /* Shadow buttons */
             /* Disabled buttons - cursor na, pointer-events */
-            
         </style>
     </head>
     <body>
         <button class="btn">Text</button>
-        <button class="btn btn-outline-primary">Border</button>
+        <!-- <button class="btn btn-outline-primary">Border</button>
 
-        <a href="#" class="btn btn-success">Text</a>
+        <a href="#" class="btn btn-success">Text</a> -->
     </body>
 </html>
