--- a/CSS/17.img-cards.html
+++ b/CSS/17.img-cards.html
@@ -17,6 +17,10 @@ div.desc {
 </head>
 <body>
 
+<div style="height: 100px; background: red;">
+  <span>Test</span>
+</div>
+
 <h2>Image Cards</h2>
 
 <div class="card">
