--- a/JS/index.html
+++ b/JS/index.html
@@ -7,12 +7,49 @@
     <body>        
 
         <script>
-            var a = 1;
-            var b = "1";
+            // console.log("HI");
+            // console.log("HI");
+            // console.log("HI");
+            // console.log("HI");
+            // console.log("HI");
+            
+            // for(var i=0; i<10; i++){                
+            //     console.log("HI");
+            // }
 
-            if(a === b){
-                alert("a & b are equal");
+            // var a = 2;
+            // var b = " X 6 = ";
+            // var c = (a * 6);            
+
+            // console.log(a + b + c);
+            
+            // console.log(a + " X 6 = " + (a*6));
+
+
+
+            var a = prompt("Enter a number:");
+
+            a = parseInt(a);
+
+            for(var i = 1; i <= 10; i++){
+                var b = " X ";
+                var c = " = ";
+                var d = a*i;
+                console.log(a + b + i + c + d);
             }
+
+            // console.log(a + " X 1 = " + (a*1));
+            // console.log(a + " X 2 = " + (a*2));
+            // console.log(a + " X 3 = " + (a*3));
+            // console.log(a + " X 4 = " + (a*4));
+            // console.log(a + " X 5 = " + (a*5));
+            // console.log(a + " X 6 = " + (a*6));
+            // console.log(a + " X 7 = " + (a*7));
+            // console.log(a + " X 8 = " + (a*8));
+            // console.log(a + " X 9 = " + (a*9));
+            // console.log(a + " X 10 = " + (a*10));
+
+
         </script>
 
         <!-- <script src="test.js"></script> -->
