advances JS and Jquery, Ajax

--- a/JS/events.html
+++ b/JS/events.html
@@ -66,10 +66,10 @@
             
 
             // Timeout
-            var timeoutFunc = function(){
-                alert("Timed Out");
-            }
-            setTimeout(timeoutFunc, 1000);
+            // var timeoutFunc = function(){
+            //     alert("Timed Out");
+            // }
+            // setTimeout(timeoutFunc, 1000);
 
 
             // TIMER
