--- a/JS/data-rendering/data-rendering.html
+++ b/JS/data-rendering/data-rendering.html
@@ -10,7 +10,7 @@
             }
 
             .emails li{
-                background: red;
+                background: #F5F7F7;
                 border-bottom: 1px solid #666;
                 padding: 5px;
                 display: flex;
