--- a/JS/data-rendering/level3.html
+++ b/JS/data-rendering/level3.html
@@ -3,30 +3,16 @@
     <head>
         <meta charset="UTF-8">
         <title></title>
-        <style>
-            .emails {
-                list-style: none;
-                padding: 10px;
-            }
-
-            .emails li{
-                background: red;
-                border-bottom: 1px solid #666;
-                padding: 5px;
-                display: flex;
-                justify-content: space-between;
-            }
-        </style>
     </head>
     <body>       
         
         <!-- <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script> -->
-        <script src="resources/jquery-3.3.1.min.js"></script>
+        <script src="../resources/jquery-3.3.1.min.js"></script>
 
         <script>
 
             //level 3
-            var names = ["Viswanath", "sagar", "test", "test", "test", "test"];
+            var names = ["Viswanath", "sagar", "test", "test1", "test2", "test3", "test4"];
             // ---- Creating List starts ----------
 
                 var ul = document.createElement("ul");
