--- a/JS/data-rendering/level4.html
+++ b/JS/data-rendering/level4.html
@@ -21,7 +21,7 @@
     <body>       
         
         <!-- <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script> -->
-        <script src="resources/jquery-3.3.1.min.js"></script>
+        <script src="../resources/jquery-3.3.1.min.js"></script>
 
         <script>
             var emails = [];
