ES6, bootstrap, typescript

--- a/Bootstrap/grid.html
+++ b/Bootstrap/grid.html
@@ -7,11 +7,6 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">        
 
         <style>
-            body {
-                background: #000;
-                color: #fff;
-            }
-
             .container{
                 height: 1000px;
             }
@@ -62,7 +57,7 @@
                 <div class="col-md-2">
                     asdasdasd
                 </div>    
-                <div class="col-md-8 border">
+                <div class="col-md-8 border-left border-right">
                     <div style="height: 1000px;">
 
                     </div>
